Use groups to conditionally execute tasks intended only for certain hosts.

--- a/ansible/roles/builder/tasks/main.yml
+++ b/ansible/roles/builder/tasks/main.yml
@@ -5,5 +5,5 @@
 - include: dolphin-lib.yml tags=lib
 
 - include: dpkg.yml tags=dpkg
-  when: ansible_os_family == 'Debian'
+  when: ansible_hostname in groups['dpkg']
 
