--- a/ansible/roles/slave/tasks/main.yml
+++ b/ansible/roles/slave/tasks/main.yml
@@ -2,8 +2,8 @@
 - include: buildslave_linux.yml tags=buildbot
   when: ansible_system == 'Linux'
 
-- include: fifoci.yml tags=fifoci hosts=fifoci
-  when: ansible_system == 'Linux'
+- include: fifoci.yml tags=fifoci
+  when: ansible_hostname in groups['fifoci']
 
 # Ansible user creation on osx seems broken, so buildbot will not be available.
 # OSX assumes the presence of an already created user that is set by host_vars
