--- a/ansible/roles/windows/tasks/uninstall_apps.yml
+++ b/ansible/roles/windows/tasks/uninstall_apps.yml
@@ -4,3 +4,14 @@
 
 - name: Uninstall Windows Modern Apps
   raw: "powershell c:\\tmp\\uninstall_apps.ps1"
+
+# turn off windows store tile
+- name: Create PushNotification registry entry
+  raw: "powershell New-Item -path Registry::HKEY_CURRENT_USER\\Software\\Policies\\Microsoft\\Windows\\CurrentVersion\\PushNotifications"
+
+- name: Set tile PushNotification disabled
+  raw: "powershell New-ItemProperty -path Registry::HKEY_CURRENT_USER\\Software\\Policies\\Microsoft\\Windows\\CurrentVersion\\PushNotifications -Name NoTileApplicationNotification -PropertyType DWord -Value 0"
+
+- name: Delete winstore tile cache
+  raw: "rm -rf c:\\users\\{{ ansible_ssh_user }}\\appdata\\local\\packages\\winstore*"
+
