Fix buildmaster process state discovery pattern.

--- a/ansible/roles/master/tasks/buildmaster.yml
+++ b/ansible/roles/master/tasks/buildmaster.yml
@@ -75,7 +75,9 @@
   when: ansible_os_family == 'Debian'
 
 - name: Start buildmaster
-  service: name=buildmaster state=restarted enabled=yes pattern=/usr/bin/buildbot
-  tags:
-    - server_restart
+  service:
+    name: buildmaster
+    state: restarted
+    enabled: yes
+    pattern: "--python=buildbot.tac"
 
