recreate sadm submodule: re-fork and branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "homebrew"]
 	path = ansible/homebrew
 	url = https://github.com/Homebrew/install.git
+[submodule "ansible/sadm"]
+	path = ansible/sadm
+	url = git@github.com:yerejm/sadm
+	branch = mm
