--- a/ansible/group_vars/buildmaster.yml
+++ b/ansible/group_vars/buildmaster.yml
@@ -47,6 +47,8 @@ changes_web_location: /srv/http/changes
 # The location of the dolphin repository clone used to determine whether commits
 # have occurred.
 changes_dolphin_location: repository
+# Number of revisions to check when determining builds that will occur.
+changes_revision_count: 10
 
 # Details for the fifoci web front end.
 fifoci_web_host: localhost
