Use vagrant cache machine scope to prevent cache contention.

--- a/ansible/roles/slave/tasks/fifoci.yml
+++ b/ansible/roles/slave/tasks/fifoci.yml
@@ -44,7 +44,7 @@
   apt_repository: repo='ppa:kirillshkrogalev/ffmpeg-next'
 
 - name: Update apt cache
-  apt: update_cache=yes cache_valid_time=86400
+  apt: update_cache=yes
 
 - name: Install ffmpeg
   apt: pkg={{ item }} state=present
