--- a/ansible/roles/common/tasks/hosts.yml
+++ b/ansible/roles/common/tasks/hosts.yml
@@ -2,14 +2,16 @@
 - name: Add servers to unix /etc/hosts
   sudo: yes
   lineinfile:
-    dest: /etc/hosts
+    dest: "{{ etc_hosts_file }}"
     state: present
     regexp: "{{ buildmaster_host }}"
     insertafter: EOF
     line: "{{ buildmaster_host }} {{ buildmaster_server_name }} {{ central_server_name }} {{ dl_server_name }} {{ changes_server_name }} {{ fifoci_server_name }}"
   when: ansible_hostname in groups['unix']
 
+# When ansible's windows support includes lineinfile, this windows task can be
+# removed.
 - name: Add servers to windows /etc/hosts
-  raw: "echo {{ buildmaster_host }} {{ buildmaster_server_name }} {{ central_server_name }} {{ dl_server_name }} {{ changes_server_name }} {{ fifoci_server_name }} >> c:\\windows\\system32\\drivers\\etc\\hosts"
-  when: ansible_os_family == 'Windows'
+  raw: "echo {{ buildmaster_host }} {{ buildmaster_server_name }} {{ central_server_name }} {{ dl_server_name }} {{ changes_server_name }} {{ fifoci_server_name }} >> {{ etc_hosts_file }}"
+  when: ansible_hostname in groups['windows']
 
