--- a/ansible/roles/slave/tasks/w_visualstudio.yml
+++ b/ansible/roles/slave/tasks/w_visualstudio.yml
@@ -33,7 +33,7 @@
   when: not app.stat.exists
 
 - name: Copy Visual Studio Unattended Deployment setup file to installer location
-  raw: "copy c:\\vagrant\\ansible\\roles\\windows\\files\\AdminDeployment.xml c:\\tmp\\AdminDeployment.xml"
+  raw: "copy c:\\vagrant\\ansible\\roles\\slave\\files\\AdminDeployment.xml c:\\tmp\\AdminDeployment.xml"
   when: not app.stat.exists
 
 - name: Install application
