--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -1,8 +1,4 @@
 ---
-- include: nginx.yml tags=nginx
-- include: buildmaster.yml tags=buildbot
-- include: central.yml tags=central
-- include: dl.yml tags=dl
-- include: fifoci.yml tags=fifoci
-- include: changes.yml tags=changes
-- include: nginx_restart.yml tags=post
+- include: master.yml tags=master
+  when: ansible_hostname in groups['buildmaster']
+
