Use supervisor to manage central and fifoci servers.

--- a/ansible/roles/master/handlers/main.yml
+++ b/ansible/roles/master/handlers/main.yml
@@ -1,4 +1,15 @@
 ---
 - name: restart nginx
-  service: name=nginx state=restarted
+  service:
+    name: nginx
+    state: restarted
 
+- name: restart fifoci supervisor
+  supervisorctl:
+    name: gunicorn_fifoci
+    state: restarted
+
+- name: restart central supervisor
+  supervisorctl:
+    name: central
+    state: restarted
